[project]
name = "web-vibe"
version = "0.1.0"
description = "Hackathon project to provide feedback to content writers and web-designers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawlee[playwright]>=0.3.4",
    "litellm>=1.44.21",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]
